--- a/tmux.conf
+++ b/tmux.conf
@@ -84,7 +84,7 @@ setw -g window-status-bell-attr default
 setw -g window-status-bell-fg red
 setw -g window-status-activity-attr bold
 
-setw -g window-status-format "#[fg=cyan]• #[fg=white]#I#[fg=cyan] #[fg=white]#12W"
+setw -g window-status-format "#[fg=cyan]• #[fg=white]#I#[fg=cyan] #[fg=white]#W"
 setw -g window-status-current-format "#[fg=red]▶ #[fg=white]#I#[fg=red,bold] #[fg=white]#W"
 
 set -g pane-border-fg colour238
