Reload zshrc with shortcut
TODO: Come up with a better way to reset all the things, maybe even across all tmux windows/panes

--- a/tmux.conf
+++ b/tmux.conf
@@ -23,6 +23,9 @@ bind ` select-window -t 0
 # reload tmux configuration
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
+# reload shell configuration
+bind-key z send-keys '. ~/.zshrc' Enter \; display-message "~/.zshrc reloaded"
+
 # clear pane
 bind C-l send-keys C-l
 
