Increase shell/vim/tmux responsiveness

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,8 @@
 setw -g mode-keys vi
 
+# Shorten escape time
+set -s escape-time 0
+
 set -g default-terminal "screen-256color"
 
 set -g base-index 1
