Fix clipboard error

--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,11 @@ setw -g mode-keys vi
 set -s escape-time 0
 
 set -g default-terminal "screen-256color"
+# Set the default terminal and copy-paste behavior
+set -g default-shell $SHELL
+
+# Be explicit about the reattaching of user namespace
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 set -g base-index 1
 setw -g pane-base-index 1
